[package]
name = "mbooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
prost = "0.11.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"
slog = "2.7.0"
slog-term = "2.9.0"
tonic = "0.8.2"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
url = "2.3.1"

[build-dependencies]
tonic-build = "0.8.2"
